--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -46,12 +46,7 @@ h6 {
 
 p {
   margin: 0 0 18px -2px;
-  letter-spacing: -0.002em;
   line-height: 1.21;
-
-  + h2 {
-    margin-top: 30px;
-  }
 }
 
 ul,
@@ -86,6 +81,10 @@ button {
     opacity: 0.5;
     pointer-events: none;
   }
+}
+
+img {
+  max-width: 100%;
 }
 
 .app-wrapper {
