--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,9 +1,14 @@
+:root {
+  --bs-gap: 20px;
+}
+
 body {
   font-family: $primary-font-family;
   font-size: $primary-font-size;
   background-color: $primary-background-color;
   color: $primary-text-color;
   letter-spacing: $primary-letter-spacing;
+  font-feature-settings: 'lnum' 1;
 }
 
 h1,
@@ -12,49 +17,28 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 24px 0;
-  padding: 0;
+  margin: 0 0 1rem 0;
+  line-height: 1.1;
   font-weight: bold;
-  line-height: 1.21;
 }
 
 h1 {
-  margin-bottom: clamp(24px, 5.5vw, 39px);
-  font-size: clamp(30px, 5.5vw, 41px);
-}
-
-h2 {
-  font-size: clamp(30px, 5.5vw, 41px);
-  color: $headline-color;
+  margin-bottom: 23px;
+  font-size: clamp(28px, 5.5vw, 34px);
 }
 
 h3 {
-  font-size: clamp(24px, 5.5vw, 34px);
-}
-
-h4 {
-  font-size: clamp(20px, 5.5vw, 31px);
-}
-
-h5 {
-  font-size: clamp(18px, 5.5vw, 24px);
-}
-
-h6 {
-  font-size: clamp(16px, 5.5vw, 18px);
+  font-size: 16px;
 }
 
 p {
-  margin: 0 0 18px -2px;
-  line-height: 1.21;
+  margin: 0 0 20px 0;
 }
 
 ul,
 ol {
-  padding-left: 1em;
-
   li {
-    margin: 0 0 18px 0;
+    margin: 0 0 20px 0;
     &:last-child {
       margin: 0;
     }
@@ -63,12 +47,8 @@ ol {
 
 a {
   text-decoration: none;
-  //color: $primary-color;
+  color: $primary-color;
   transition: 0.3s;
-
-  &:hover {
-    //color: $primary-hover-color;
-  }
 }
 
 button {
@@ -87,6 +67,10 @@ img {
   max-width: 100%;
 }
 
+.container-fluid {
+  max-width: 1300px;
+}
+
 .app-wrapper {
   display: flex;
   flex-direction: column;
@@ -94,13 +78,7 @@ img {
   overflow: hidden;
 }
 
-.container {
-  max-width: 1306px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
 .main-area {
   flex: 1 1 auto;
-  padding: 30px 0;
+  padding: 16px 0 100px;
 }
