--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,33 +1,34 @@
 // Define breakpoints
-$breakpoint-xsmall: 374px;
-$breakpoint-small: 575px;
-$breakpoint-medium: 767px;
-$breakpoint-large: 991px;
-$breakpoint-xlarge: 1199px;
+$breakpoints: (
+  xsmall: 374,
+  small: 575,
+  medium: 767,
+  large: 991,
+  xlarge: 1199,
+);
 
-// Mixin for media queries
+// Mixin for max-width media queries
 @mixin respond-to($breakpoint) {
-  @if $breakpoint == small {
-    @media (max-width: #{$breakpoint-small}) {
-      @content;
-    }
-  } @else if $breakpoint == xsmall {
-    @media (max-width: #{$breakpoint-xsmall}) {
-      @content;
-    }
-  } @else if $breakpoint == medium {
-    @media (max-width: #{$breakpoint-medium}) {
-      @content;
-    }
-  } @else if $breakpoint == large {
-    @media (max-width: #{$breakpoint-large}) {
-      @content;
-    }
-  } @else if $breakpoint == xlarge {
-    @media (max-width: #{$breakpoint-xlarge}) {
+  $value: map-get($breakpoints, $breakpoint);
+
+  @if $value {
+    @media (max-width: #{$value}px) {
       @content;
     }
   } @else {
-    @warn "Unknown breakpoint: #{$breakpoint}. Please use one of small, medium, large, xlarge.";
+    @warn "Unknown breakpoint: #{$breakpoint}. Please use one of #{map-keys($breakpoints)}.";
+  }
+}
+
+// Mobile-first mixin for min-width media queries
+@mixin respond-from($breakpoint) {
+  $value: map-get($breakpoints, $breakpoint);
+
+  @if $value {
+    @media (min-width: #{$value + 1}px) {
+      @content;
+    }
+  } @else {
+    @warn "Unknown breakpoint: #{$breakpoint}. Please use one of #{map-keys($breakpoints)}.";
   }
 }
