--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -27,18 +27,27 @@ h1 {
   font-size: clamp(28px, 5.5vw, 34px);
 }
 
+h2 {
+  font-size: 22px;
+}
+
 h3 {
   font-size: 16px;
 }
 
 p {
   margin: 0 0 20px 0;
+
+  &:last-child {
+    margin: 0;
+  }
 }
 
 ul,
 ol {
   li {
     margin: 0 0 20px 0;
+
     &:last-child {
       margin: 0;
     }
