--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -17,6 +17,7 @@ $primary-font-size: 16px;
 $secondary-font-size: 14px;
 $primary-line-height: 1.2;
 $primary-letter-spacing: -0.01em;
+$secondary-letter-spacing: 0.02em;
 
 // Переменные для ui
 $primary-border-radius: 10px;
